
[metadata]
name = dkvaultutils
version = attr: dkvaultutils.__version__
author = Sriram Panyam
author_email = sri@dagknows.com
url = https://github.com/dagknows/dkvaultutils
description = Common utils and access libs and patterns for dagknows vault access
long_description = file: README.md
long_description_content_type = text/markdown
keywords = deployment tools, cli, api, setuptools
license = BSD 3-Clause License
classifiers =
	License :: OSI Approved :: BSD License
	Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = 
  requests
  hvac
  pywinrm
  typer[all]

# [options.package_data]
# [options.entry_points]
# console_scripts =
  # dbvaultutils = dkvaultutils.main:app
